# goskyr

./: .gitignore  .goreleaser.yaml  AGENTS.md  BUILD.bazel  Makefile  README.md  WORKSPACE  concerts-config.yml  deps.bzl  go.mod  go.sum  https-www-sleeping-village-com-events_05-abaa_config.yml  main.go  main_test.go
autoconfig/: BUILD.bazel  analyzer.go  autoconfig.go  locationprops.go
cmd/goskyr/: BUILD.bazel  main.go  main_test.go  main_testdata.go
config/: BUILD.bazel
date/: BUILD.bazel  date.go
docs/: PROPOSAL_REQUIRED_DETAIL_URL.md  README.md
docs/analyzed/: MINOCCS_VS_RECORD_COUNT_ANALYSIS.md
docs/completed/: PROPOSAL_MIN_RECORDS.md
docs/design/: design_generate.md  design_overview.md  design_scrape.md  design_sequential-field-extraction.md  design_sequential-scraping.md
fetch/: BUILD.bazel  cache.go  fetch_cache.go  fetchcache.go  fetcher.go  file_cache.go  filecache.go  memory_cache.go  memorycache.go
generate/: BUILD.bazel  README.md  analyze.go  analyze_test.go  analyzer.go  config_id_test.go  generate.go  generate_test.go  locationprops.go  parse.go
ml/: BUILD.bazel  ml.go
observability/: instruments.go  instruments_test.go  logging.go  metering.go  observability.go  tracing.go
output/: BUILD.bazel  api.go  debug.go  file.go  itemmap.go  json.go  record.go  stdout.go  writer.go
scrape/: BUILD.bazel  fieldname.go  fieldname_test.go  scrape.go  scrape_test.go  template.go  template_test.go
scraper/: BUILD.bazel  scraper.go  scraper_file_test.go  scraper_test.go
scraper/testdata/: https-books-toscrape-com_config.yml  https-quotes-toscrape-com-tableful.html  https-quotes-toscrape-com-tableful.json  https-quotes-toscrape-com-tableful_config.yml  https-quotes-toscrape-com.json  https-quotes-toscrape-com_config.yml  https-realpython-github-io-fake-jobs_config.yml  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets.json  https-www-scrapethissite-com-pages-simple.json
testdata/: BUILD.bazel  books-testdata.txt  https-books-toscrape-com.json  https-books-toscrape-com_05-aa.json  https-books-toscrape-com_05-aa_config.yml  https-books-toscrape-com_05-ab.json  https-books-toscrape-com_05-ab_config.yml  https-books-toscrape-com_10-aa_config.yml  https-books-toscrape-com_5.json  https-quotes-toscrape-com.json  https-quotes-toscrape-com_05-ab.json  https-quotes-toscrape-com_05-ab_config.yml  https-quotes-toscrape-com_10-ab.json  https-quotes-toscrape-com_10-ab_config.yml  https-realpython-github-io-fake-jobs_05-a.json  https-realpython-github-io-fake-jobs_05-a_config.yml  https-realpython-github-io-fake-jobs_10-a.json  https-realpython-github-io-fake-jobs_10-a_config.yml  https-realpython-github-io-fake-jobs_subpages.html  https-realpython-github-io-fake-jobs_subpages_05-a.json  https-realpython-github-io-fake-jobs_subpages_05-a_config.yml  https-realpython-github-io-fake-jobs_subpages_10-a_config.yml  https-realpython-github-io-fake-jobs_subpages_20-a.json  https-realpython-github-io-fake-jobs_subpages_20-a_config.yml  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets_0.json  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets_05-ab.json  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets_05-ab_config.yml  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets_20-a.json  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets_20-a_config.yml  https-webscraper-io-test-sites-e-commerce-allinone-computers-tablets_config.yml  https-www-scrapethissite-com-pages-simple_05-a.json  https-www-scrapethissite-com-pages-simple_05-a_config.yml  https-www-scrapethissite-com-pages-simple_10-a_config.yml  spiritual_growth_events_com.json  testdata.txt  theenneagraminbusiness-com-calendar.json
testdata/chicago/: chicago.json  chicago_config.yml  hideoutchicago-com-events.html  https-hideoutchicago-com-events.html  https-hideoutchicago-com-events.json  https-hideoutchicago-com-events_05-aa.json  https-hideoutchicago-com-events_05-aa_config.yml  https-hideoutchicago-com-events_05-ac.json  https-hideoutchicago-com-events_05-ac_config.yml  https-hideoutchicago-com-events_10-aab.json  https-hideoutchicago-com-events_10-abb_config.yml  https-hideoutchicago-com-events_20-ab.json  https-hideoutchicago-com-events_20-ab_config.yml  https-hideoutchicago-com-events_5.json  https-hideoutchicago-com-events_5_config.yml  https-hideoutchicago-com-events_config.yml  https-hideoutchicago-com-events_subpages_05-ac.json  https-hideoutchicago-com-events_subpages_05-ac_config.yml  https-hideoutchicago-com-events_subpages_05-aca.json  https-hideoutchicago-com-events_subpages_05-aca_config.yml  https-hideoutchicago-com-events_subpages_manual.json  https-hideoutchicago-com-events_subpages_manual_config.yml  https-lh-st-com.html  https-lh-st-com.json  https-lh-st-com_05-aa.json  https-lh-st-com_05-aa_config.yml  https-lh-st-com_05-aab.json  https-lh-st-com_05-aab_config.yml  https-lh-st-com_1.json  https-lh-st-com_10-aa.json  https-lh-st-com_10-aa_config.yml  https-lh-st-com_10-aab.json  https-lh-st-com_10-aab_config.yml  https-lh-st-com_1_config.yml  https-lh-st-com_20-aa.json  https-lh-st-com_20-aa_config.yml  https-lh-st-com_20-aab.json  https-lh-st-com_20-aab_config.yml  https-lh-st-com_config.yml  https-metrochicago-com-events.html  (+76 more)
testdata/enneagram/: cnvc_org.html  cp_enneagram_com-2.html  cp_enneagram_com.html  debhorton-com-events.html  debhorton-com-events_05-abbab.json  debhorton-com-events_05-abbab_config.yml  deborahegerton-com-events.html  enneagram-ohio-com-all-workshops.html  enneagram-ohio-com-all-workshops_05-aab.json  enneagram-ohio-com-all-workshops_05-aab_config.yml  enneagram_anytime_com.html  enneagram_anytime_com_05-aba.json  enneagram_anytime_com_05-aba_config.yml  enneagram_anytime_com_10-aa.json  enneagram_anytime_com_20-aa.json  enneagram_anytime_com_20-aa_config.yml  enneagram_colorado_org.html  enneagram_institute_com.html  enneagram_institute_com_05-abb.json  enneagram_institute_com_10-aa.json  (+39 more)
types/: BUILD.bazel
utils/: BUILD.bazel  file_utils.go  url_utils.go
(+1308 files in other folders)
