load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# gazelle:prefix github.com/findyourpaths/goskyr
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/goskyr",
    visibility = ["//visibility:public"],
    deps = [
        "//autoconfig:go_default_library",
        "//config:go_default_library",
        "//ml:go_default_library",
        "//output:go_default_library",
        "//scraper:go_default_library",
        "@com_github_jessevdk_go_flags//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_x_exp//slog:go_default_library",
    ],
)

go_binary(
    name = "goskyr",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//scraper:go_default_library",
        "@com_github_nsf_jsondiff//:go_default_library",
    ],
)
