load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "analyzer.go",
        "autoconfig.go",
        "locationprops.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/autoconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//date:go_default_library",
        "//fetch:go_default_library",
        "//ml:go_default_library",
        "//output:go_default_library",
        "//scraper:go_default_library",
        "//utils:go_default_library",
        "@com_github_agnivade_levenshtein//:go_default_library",
        "@com_github_gdamore_tcell_v2//:go_default_library",
        "@com_github_gosimple_slug//:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
        "@com_github_rivo_tview//:go_default_library",
        "@org_golang_x_net//html:go_default_library",
    ],
)
