load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "date.go",
        "day_format.go",
        "month_format.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/date",
    visibility = ["//visibility:public"],
    deps = ["//utils:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["date_test.go"],
    embed = [":go_default_library"],
)
