load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "date",
    srcs = [
        "date.go",
        "day_format.go",
        "month_format.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/date",
    visibility = ["//visibility:public"],
    deps = ["//utils"],
)

go_test(
    name = "date_test",
    srcs = ["date_test.go"],
    embed = [":date"],
)
