load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "fetch",
    srcs = [
        "cache.go",
        "fetcher.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/fetch",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//utils",
        "@com_github_chromedp_cdproto//cdp",
        "@com_github_chromedp_cdproto//dom",
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_gosimple_slug//:slug",
        "@com_github_puerkitobio_goquery//:goquery",
    ],
)
