load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "generate",
    srcs = [
        "analyze.go",
        "generate.go",
        "locationprops.go",
        "parse.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/generate",
    visibility = ["//visibility:public"],
    deps = [
        "//date",
        "//fetch",
        "//ml",
        "//output",
        "//scrape",
        "//utils",
        "@com_github_agnivade_levenshtein//:levenshtein",
        "@com_github_gdamore_tcell_v2//:tcell",
        "@com_github_jpillora_go_tld//:go-tld",
        "@com_github_puerkitobio_goquery//:goquery",
        "@com_github_rivo_tview//:tview",
        "@org_golang_x_net//html",
    ],
)
