load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ml",
    srcs = ["ml.go"],
    importpath = "github.com/findyourpaths/goskyr/ml",
    visibility = ["//visibility:public"],
    deps = [
        "//scrape",
        "//utils",
        "@com_github_sjwhitworth_golearn//base",
        "@com_github_sjwhitworth_golearn//evaluation",
        "@com_github_sjwhitworth_golearn//knn",
    ],
)
