load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "file.go",
        "json.go",
        "stdout.go",
        "writer.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/output",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//slog:go_default_library"],
)
