load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "output",
    srcs = [
        "api.go",
        "debug.go",
        "file.go",
        "itemmap.go",
        "json.go",
        "stdout.go",
        "writer.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/output",
    visibility = ["//visibility:public"],
)
