load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "scrape",
    srcs = ["scrape.go"],
    importpath = "github.com/findyourpaths/goskyr/scrape",
    visibility = ["//visibility:public"],
    deps = [
        "//date",
        "//fetch",
        "//output",
        "//utils",
        "@com_github_antchfx_jsonquery//:jsonquery",
        "@com_github_goodsign_monday//:monday",
        "@com_github_ilyakaznacheev_cleanenv//:cleanenv",
        "@com_github_jpillora_go_tld//:go-tld",
        "@com_github_puerkitobio_goquery//:goquery",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_x_net//html",
    ],
)

go_test(
    name = "scrape_test",
    srcs = ["scrape_test.go"],
    data = ["//testdata"],
    embed = [":scrape"],
    deps = [
        "//date",
        "//output",
        "@com_github_puerkitobio_goquery//:goquery",
    ],
)
