load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["scraper.go"],
    importpath = "github.com/findyourpaths/goskyr/scraper",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//date:go_default_library",
        "//fetch:go_default_library",
        "//output:go_default_library",
        "//types:go_default_library",
        "//utils:go_default_library",
        "@com_github_antchfx_jsonquery//:go_default_library",
        "@com_github_goodsign_monday//:go_default_library",
        "@com_github_ilyakaznacheev_cleanenv//:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
        "@in_gopkg_yaml_v3//:go_default_library",
        "@org_golang_x_exp//slog:go_default_library",
        "@org_golang_x_net//html:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["scraper_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//date:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
    ],
)
