load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = [
        "file_utils.go",
        "url_utils.go",
        "utils.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gosimple_slug//:slug",
        "@org_golang_x_exp//constraints",
    ],
)
