load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/findyourpaths/goskyr/cmd/goskyr",
    visibility = ["//visibility:private"],
    deps = [
        "//fetch:go_default_library",
        "//generate:go_default_library",
        "//ml:go_default_library",
        "//scrape:go_default_library",
        "//utils:go_default_library",
        "@com_github_alecthomas_kong//:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
    ],
)

go_binary(
    name = "goskyr",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
  size = "large",
    deps = [
        "//fetch:go_default_library",
        "//generate:go_default_library",
        "//output:go_default_library",
        "//scrape:go_default_library",
        "//utils:go_default_library",
        "@com_github_nsf_jsondiff//:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
        "@com_github_sergi_go_diff//diffmatchpatch:go_default_library",
    ],
)
