load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "goskyr_lib",
    srcs = [
        "main.go",
        "main_testdata.go",
    ],
    importpath = "github.com/findyourpaths/goskyr/cmd/goskyr",
    visibility = ["//visibility:private"],
    deps = [
        "//fetch",
        "//generate",
        "//ml",
        "//scrape",
        "//utils",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_test(
    name = "goskyr_test",
    size = "large",
    srcs = ["main_test.go"],
    embed = [":goskyr_lib"],
    deps = [
        "//fetch",
        "//generate",
        "//output",
        "//scrape",
        "//utils",
        "@com_github_nsf_jsondiff//:jsondiff",
        "@com_github_sergi_go_diff//diffmatchpatch",
    ],
)

go_binary(
    name = "goskyr",
    embed = [":goskyr_lib"],
    visibility = ["//visibility:public"],
)
